[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Lewis Moronta <lewis.moronta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.2"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
